--- a/style.css
+++ b/style.css
@@ -280,6 +280,31 @@ header .navbar ul li a:hover {
   background: var(--yellow);
 }
 
+.heading1 {
+  text-align: center;
+  margin: 0 6rem;
+  font-size: 4rem;
+  padding: 1rem;
+
+  color: #fff;
+}
+.heading2 {
+  color: rgb(97, 243, 109);
+  font-weight: 900;
+}
+.heading3 {
+  color: rgb(238, 214, 3);
+  font-weight: 900;
+}
+.heading4 {
+  color: rgb(4, 211, 226);
+  font-weight: 900;
+}
+.heading5 {
+  color: rgb(0, 155, 13);
+  font-weight: 900;
+}
+
 .portfolio .box-container {
   display: flex;
   align-items: center;
