--- a/style.css
+++ b/style.css
@@ -229,6 +229,17 @@ header .navbar ul li a:hover {
   color: #fff;
 }
 
+.skill p {
+ font-size: 2rem;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0.7rem;
+  padding-left: 10rem;
+}
+
 .education .box-container {
   display: flex;
   align-items: center;
